--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   font-family: "Gupter", serif;
   background-color: white;
   color: black;
 }
 
 .custom-img {
-  height: 405px; 
-  width: 100%; 
+  height: 405px;
+  width: 100%;
   margin-top: 70px;
   border: solid whitesmoke 20px;
 }
@@ -19,5 +19,13 @@ body{
   display: none !important;
 }
 
+/* Global CSS */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
-
+input[type="number"] {
+  -moz-appearance: textfield; /* For Firefox */
+}
